# gs_prompt_manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: README.md  examples.md  user-guide.md
src/gs_prompt_manager/: __init__.py  prompt_base.py  prompt_manager.py
test/: __init__.py  conftest.py  test_prompt_base.py  test_prompt_manager.py
test/sample_prompts/: prompt_hello_world.py
