[project]
name = "gs_prompt_manager"
version = "0.0.5"
authors = [{ name = "Guan Huang" }]
description = "A lightweight Python package for managing and organizing prompt templates with auto-discovery and variable substitution."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
keywords = [
  "prompt",
  "prompt-engineering",
  "llm",
  "gpt",
  "chatgpt",
  "claude",
  "ai",
  "machine-learning",
  "template",
  "prompt-management",
]
license = { text = "Apache-2.0" }
dependencies = ["regex>=2022.1.18"]

[project.urls]
Homepage = "https://github.com/CoronRing/gs_prompt_manager"
Documentation = "https://github.com/CoronRing/gs_prompt_manager/tree/main/docs"
Repository = "https://github.com/CoronRing/gs_prompt_manager"
Issues = "https://github.com/CoronRing/gs_prompt_manager/issues"
Changelog = "https://github.com/CoronRing/gs_prompt_manager/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gs_prompt_manager"]
package-dir = { "" = "src" }
